--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         #map {
             width: 100%;         /* luôn vừa với màn hình */
             height: 100vh;        /* 60% chiều cao màn hình */
-            max-height: 600px;   /* thêm giới hạn đẹp */
+            /*max-height: 600px;*/   /* thêm giới hạn đẹp */
             border-radius: 10px;
             margin: auto;
         }
@@ -63,4 +63,5 @@
 
 </body>
 </html>
+
 
